Refine matching system and upgrade scripts
- Ignore extern/inline/thunk functions when generating signatures
- Don't apply labels in `MatchSdkSignatures.java` script
- Simplify matching logic to simply gather all matching functions
  for each signature
  - The caller will need to manually process, resolve, and label
    matched functions accordingly.